:memo: Update docs
